--- a/event.html
+++ b/event.html
@@ -65,7 +65,7 @@
         <br>
         <br>«Ми займаємося тим, в що справді віримо і любимо. Усі організатори TEDx в Україні працюють на волонтерських засадах».
         <br>
-        <br>Головною авдиторією конференції будуть студенти, тому й TEDxLNU проходитиме в альма-матері молодих людей — ЛНУ ім. Івана Франка. Окрім студентів, до події приєднаються викладачі та всі бажаючі. Запрошуємо і вас відвідати першу в Україні конференцію
+        <br>Головною аудиторією конференції будуть студенти, тому й TEDxLNU проходитиме в альма-матері молодих людей — ЛНУ ім. Івана Франка. Окрім студентів, до події приєднаються викладачі та всі бажаючі. Запрошуємо і вас відвідати першу в Україні конференцію
         в стилі TEDx University.</p>
     </div>
   </div>
@@ -114,7 +114,7 @@
           <h3 class="quote">"TED-лекції — це найкраща річ, яку можна подивитись в інтернеті"</h3>
         </div>
         <div class="w-col w-col-6 subfooter-right">
-          <h3>Get updates about TDExLNU.</h3>
+          <h3>Слідкуйте за оновленнями</h3>
           <a class="w-inline-block social-button" href="mailto:tedxlnuevent@gmail.com?subject=Hi%2C%20TDExLNU" target="_blank">
             <img src="images/0ebbdb2f-7fb6-4c01-9b1f-b90f5b675dbf_7a-social-email.png" width="21px" alt="0ebbdb2f-7fb6-4c01-9b1f-b90f5b675dbf_7a-social-email.png">
           </a>
