--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="w-row organize-row">
         <div class="w-col w-col-9">
           <h2>Що таке TED?</h2>
-          <p><strong>TED</strong> - це щорічна конференція, що проводиться в США, про унікальні проекти та інновації, які несуть в собі ідеї зміни і розвитку суспільства. Девіз конференції <em>«Ideas worth spreading»</em> (дослівно, «Ідеї, гідні розповсюдження»)
+          <p><strong>TED</strong> - це щорічна конференція, яка проводиться в США, про унікальні проекти та інновації, які несуть в собі ідеї зміни і розвитку суспільства. Девіз події <em>«Ideas worth spreading»</em> (дослівно, «Ідеї, гідні розповсюдження»)
             відображає місію конференції - нести ідеї, які здатні змінити світ на краще.</p>
           <p><strong>TED</strong> охоплює багато сфер нашого життя - освіту, мистецтво, науку, спорт, соціологію, медицину, підприємництво, енергозбереження та інше. Зі сцени <strong>TED</strong> про свої ідеї розповідають провідні вчені світу, політологи та
             соціологи, художники і дизайнери, програмісти і професори університетів.</p>
@@ -118,7 +118,7 @@
       <div class="w-row">
         <div class="w-col w-col-9">
           <h2>ОСОБЛИВОСТІ TED</h2>
-          <p><strong>TED</strong>, як подія неординарна і, у своєму роді, явище унікальне, має власні правила і свій стиль.
+          <p><strong>TED</strong>, як подія неординарна і, у своєму роді, явище унікальне, має власні правила та свій стиль.
             <br>
             <br>Виступ на конференції TED називається TED Talk. Всі відеозаписи виступів публікуються на офіційному сайті TED.com. Сьогодні бібліотека TED Talks налічує більш ніж 1000 кращих виступів з конференцій.
             <br>
@@ -142,12 +142,11 @@
       </div>
       <div class="w-row">
         <div class="w-col w-col-3">
-          <h5>Вартість вхідного квитка на конференцію становить близько 6000 $ при незмінно повному залі і кількості людей понад 1000 людин.</h5>
+          <h5>Вартість вхідного квитка на конференцію становить близько 6000 $. у залі завжди перебуває не менше 1000 людей.</h5>
         </div>
         <div class="w-col w-col-9">
           <p>Конференції <strong>TED</strong> проходять щовесни у Лонг Біч і Палм Спрінгс. Конференції розкривають через своїх спікерів ті глобальні теми, які є на даний момент найбільш актуальними в т.ч. теми науки, бізнесу, мистецтва. Конференція проходить
-            4 дні, на протязi яких зі сцени вимовляється бiля 50 презентацій. Крім цього, <strong>TED</strong> завжди залишає місце перфомансам у вигляді танцювальних або музичних виступів. Інтерес до TED залишається завжди підвищений і квитки розкуповуються
-            заздалегідь.</p>
+            4 дні, протягом яких зі сцени транслюють близько 50 презентацій. Крім цього, <strong>TED</strong> завжди залишає місце перфомансам у вигляді танцювальних або музичних виступів. Зацікавлення до TED залишається завжди, квитки на подію розкуповуються "за лічені хвилини".</p>
         </div>
       </div>
     </div>
@@ -155,7 +154,7 @@
   <div class="section">
     <div class="w-container">
       <h2>ЩО ТАКЕ TEDx?</h2>
-      <h4>TEDx дають можливість містам, університетам, спільнотам долучитися до світового руху TED і зробити свій внесок у розвиток ідей совершествованія світу і суспільства.</h4>
+      <h4>TEDx дає можливість містам, університетам і спільнотам долучитися до світового руху TED й зробити свій внесок у розвиток ідей вдосконалення світу та суспільства.</h4>
       <p>TEDx - це незалежні локальні конференції, що проводяться під егідою TED в різних містах і країнах. По суті, це самостійна подія, яка дотримується правил TED і готується ініціативною групою в якомусь місті.</p>
       <div class="w-embed w-video" style="padding-top: 56.20608899297424%;">
         <iframe src="https://www.youtube.com/embed/othM2dwi2bE?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
@@ -188,7 +187,7 @@
           <h3 class="quote">"TED-лекції — це найкраща річ, яку можна подивитись в інтернеті"</h3>
         </div>
         <div class="w-col w-col-6 subfooter-right">
-          <h3>Get updates about TDExLNU.</h3>
+          <h3>Слідкуйте за оновленнями</h3>
           <a class="w-inline-block social-button" href="mailto:tedxlnuevent@gmail.com?subject=Hi%2C%20TDExLNU" target="_blank">
             <img src="images/0ebbdb2f-7fb6-4c01-9b1f-b90f5b675dbf_7a-social-email.png" width="21px" alt="0ebbdb2f-7fb6-4c01-9b1f-b90f5b675dbf_7a-social-email.png">
           </a>
