--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
         <div class="w-col w-col-6">
           <div class="w-row">
             <div class="w-col w-col-4">
-              <img class="team-image" src="images/marichka.jpg" width="512" alt="marichka.jpg">
+              <img class="team-image" src="images/marichka.jpg" width="250" alt="marichka.jpg">
             </div>
             <div class="w-col w-col-8">
               <h3 class="team-text">Джала Марія</h3>
@@ -125,7 +125,7 @@
           <h3 class="quote">"TED-лекції — це найкраща річ, яку можна подивитись в інтернеті"</h3>
         </div>
         <div class="w-col w-col-7 subfooter-right">
-          <h3>Get updates about TDExLNU.</h3>
+          <h3>Слідкуйте за оновленнями</h3>
           <a class="w-inline-block social-button" href="mailto:tedxlnuevent@gmail.com?subject=Hi%2C%20TEDxLNU" target="_blank">
             <img src="images/0ebbdb2f-7fb6-4c01-9b1f-b90f5b675dbf_7a-social-email.png" width="21px" alt="0ebbdb2f-7fb6-4c01-9b1f-b90f5b675dbf_7a-social-email.png">
           </a>
