--- a/event.html
+++ b/event.html
@@ -93,13 +93,13 @@
       <h2>Наші спонсори та партнери</h2>
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <img src="images/lohika.png" alt="lohika.png">
+          <a href="http://www.lohika.com.ua" target="blank" ><img src="images/lohika.png" alt="lohika.png"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <img src="images/glogic.png" alt="glogic.png">
+          <a href="http://www.globallogic.com.ua/uk" target="blank" ><img src="images/glogic.png" alt="glogic.png"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <img src="images/Eleks-LOGOx200.png" alt="Eleks-LOGOx200.png">
+          <a href="http://www.eleks.com" target="blank" ><img src="images/Eleks-LOGOx200.png" alt="Eleks-LOGOx200.png"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
@@ -136,7 +136,12 @@
   </div>
   <div class="section grey footer">
     <div class="w-container">
-      <p class="footer-text">Copyright ©2013 TEDxLNU</p><a class="footer-link" href="https://plus.google.com/102989169039151799851/about" target="_blank">by Oleh Zasadnyy</a>
+     <p class="footer-text">Copyright ©2013 TEDxLNU<a class="footer-link" href="https://plus.google.com/102989169039151799851/about" target="_blank">by Oleh Zasadnyy</a></p>
+		<div class="social-share">
+			<div class="fb-like" data-href="http://tedxlnu.com" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+			<div class="g-plusone" data-size="medium"></div>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-lang="uk" data-hashtags="tedxlnu">Твіт</a>
+		</div>
     </div>
   </div>
 	
@@ -147,6 +152,28 @@
           families: ["Open Sans:300,400,600,700,800","Montserrat:400,700","Bitter:400,700"]
         }
       });
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-45524581-1', 'tedxlnu.com');
+	  ga('send', 'pageview');
+		
+		(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/uk_UA/all.js#xfbml=1";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+
+		  (function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		
+		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
     </script>
     <script type="text/javascript" src="js/webflow.js" defer></script>
 </body>
