--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/webflow.css">
     <link rel="stylesheet" type="text/css" href="css/tedxlnu.webflow.css">
     <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/51d1bb05fc804b2621000001/webclip-slate.png">
+	<script type="text/javascript" src="http://vkontakte.ru/js/api/share.js?9" charset="windows-1251"></script> 
   </head><body>
   <header class="section">
     <div class="w-container">
@@ -62,7 +63,7 @@
     <div class="w-container">
       <div class="w-row">
         <div class="w-col w-col-6 center">
-          <img src="images/famous-people.png" width="385" alt="famous-people.png">
+          <img src="images/famous-people.jpg" width="385" alt="famous-people.png">
         </div>
         <div class="w-col w-col-6">
           <p>Серед найвідоміших особистостей, що виступали на конференції, можна відзначити нобелівських лауреатів Джеймса Уотсона і Мюррея Гелл-Манна, колишнього президента США - Білла Клінтона, засновника Wikipedia Джиммі Вейлза, засновників Google Ларрі
@@ -166,13 +167,13 @@
       <h2>Наші спонсори та партнери</h2>
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <img src="images/lohika.png" alt="lohika.png">
+          <a href="http://www.lohika.com.ua" target="blank" ><img src="images/lohika.png" alt="lohika.png"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <img src="images/glogic.png" alt="glogic.png">
+          <a href="http://www.globallogic.com.ua/uk" target="blank" ><img src="images/glogic.png" alt="glogic.png"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <img src="images/Eleks-LOGOx200.png" alt="Eleks-LOGOx200.png">
+          <a href="http://www.eleks.com" target="blank" ><img src="images/Eleks-LOGOx200.png" alt="Eleks-LOGOx200.png"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
@@ -209,7 +210,12 @@
   </div>
   <div class="section grey footer">
     <div class="w-container">
-      <p class="footer-text">Copyright ©2013 TEDxLNU</p><a class="footer-link" href="https://plus.google.com/102989169039151799851/about" target="_blank">by Oleh Zasadnyy</a>
+      <p class="footer-text">Copyright ©2013 TEDxLNU<a class="footer-link" href="https://plus.google.com/102989169039151799851/about" target="_blank">by Oleh Zasadnyy</a></p>
+		<div class="social-share">
+			<div class="fb-like" data-href="http://tedxlnu.com" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+			<div class="g-plusone" data-size="medium"></div>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-lang="uk" data-hashtags="tedxlnu">Твіт</a>
+		</div>
     </div>
   </div>
 	
@@ -221,7 +227,31 @@
           families: ["Open Sans:300,400,600,700,800","Montserrat:400,700","Bitter:400,700"]
         }
       });
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-45524581-1', 'tedxlnu.com');
+		  ga('send', 'pageview');
+		
+		(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/uk_UA/all.js#xfbml=1";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+
+		  (function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		
+		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
     </script>
     <script type="text/javascript" src="js/webflow.js" defer></script>
+	
 </body>
 </html>
