--- a/team.html
+++ b/team.html
@@ -101,7 +101,7 @@
   </div>
   <div class="section">
     <div class="w-container sponsors">
-      <h2>Наші спонсори та партнери</h2>
+      <h2>Спонсори</h2>
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
           <a href="http://www.lohika.com.ua" target="blank" ><img src="images/lohika.png" alt="lohika.png"></a>
@@ -112,6 +112,19 @@
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
           <a href="http://www.eleks.com" target="blank" ><img src="images/Eleks-LOGOx200.png" alt="Eleks-LOGOx200.png"></a>
         </div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+      </div>
+    </div>
+	 <div class="w-container sponsors">
+      <h2>Інформаційні партнери</h2>
+      <div class="w-row">
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+          <a href="http://inspired.com.ua/" target="blank" ><img src="images/inspired.png" alt="lohika.png"></a>
+        </div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
@@ -149,7 +162,7 @@
     <div class="w-container">
      <p class="footer-text">Copyright ©2013 TEDxLNU<a class="footer-link" href="https://plus.google.com/102989169039151799851/about" target="_blank">by Oleh Zasadnyy</a></p>
 		<div class="social-share">
-			<div class="fb-like" data-href="http://tedxlnu.com" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+			<div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
 			<div class="g-plusone" data-size="medium"></div>
 			<a href="https://twitter.com/share" class="twitter-share-button" data-lang="uk" data-hashtags="tedxlnu">Твіт</a>
 		</div>
