--- a/index.html
+++ b/index.html
@@ -167,15 +167,17 @@
       <h2>Спонсори</h2>
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <a href="http://www.lohika.com.ua" target="blank" ><img src="images/lohika.png" alt="lohika.png"></a>
+          <a href="http://www.lohika.com.ua" target="blank" ><img src="images/lohika.png" alt="lohika"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <a href="http://www.globallogic.com.ua/uk" target="blank" ><img src="images/glogic.png" alt="glogic.png"></a>
+          <a href="http://www.globallogic.com.ua/uk" target="blank" ><img src="images/glogic.png" alt="glogic"></a>
         </div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <a href="http://www.eleks.com" target="blank" ><img src="images/Eleks-LOGOx200.png" alt="Eleks-LOGOx200.png"></a>
+          <a href="http://www.eleks.com" target="blank" ><img src="images/Eleks-LOGOx200.png" alt="Eleks"></a>
         </div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+		  <a href="http://betaplace.com.ua/" target="blank" ><img src="images/betaplace.png" alt="betaplace"></a>
+		</div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
       </div>
@@ -184,10 +186,14 @@
       <h2>Інформаційні партнери</h2>
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-          <a href="http://inspired.com.ua/" target="blank" ><img src="images/inspired.png" alt="lohika.png"></a>
+          <a href="http://lviv.gdg.org.ua" target="blank" ><img src="images/gdglviv.png" alt="GDG Lviv"></a>
         </div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+          <a href="http://inspired.com.ua" target="blank" ><img src="images/inspired.png" alt="inspired"></a>
+		</div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+		  <a href="http://ratusha.lviv.ua" target="blank" ><img src="images/ratusha.png" alt="ratusha"></a>
+		</div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
