--- a/speakers.html
+++ b/speakers.html
@@ -3,7 +3,7 @@
 <html data-wf-site="5245e39457680bc2570001e9">
   <head>
     <meta charset="utf-8">
-    <title>TEDxLNU - Event</title>
+    <title>TEDxLNU - Speakers</title>
 	<meta name="description" content="TEDxLNU, December 14, Lviv">
 	<meta name="author" content="Oleh Zasadnyy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,64 +38,50 @@
       </div>
     </div>
   </div>
-  <div class="section white" id="page-nav-organize">
+  <div>
     <div class="w-container">
-      <img class="center" src="images/lnu.jpg" width="995" alt="lnu.jpg">
-      <p>
-        <br>
-        <br><strong>Університет</strong> — це центр знань та інкубатор для великих ідей. Заходи, що проводилися в університеті, організовані студентами та адміністрацією, показали перевагу, заполонивши аудиторії людьми, які готові щось змінювати.
-        <br>
-        <br>Програма TEDx надає можливість насолоджуватися враженнями від доповідей студентам, бізнесменам, літлюбителям чи просто групам друзів у різних містах та країнах. Конференції в стилі TEDx були і в Україні. Запозичаючи досвід іноземців й надихаючись
-        результатами попередників, <strong>ми вирішили створити першу українську подію
-в стилі TEDx на основі
-університету.</strong>
-      </p>
-    </div>
-  </div>
-  <div class="section grey" id="page-nav-display">
-    <div class="w-container">
-      <h2>TEDxLNU «Подих
-майбутнього» </h2>
-      <p>Перша в Україні конференція в стилі TEDx University.
-        <br>
-        <br>Нашими доповідачами будуть спеціалісти з різних галузей, які розказуватимуть, що чекає нас у найближчому майбутньому, як долучатися до створення «чогось нового» та пробуватимуть передбачити розвиток власної галузі/науки/хобі. Ми вважаємо, що молодій
-        людині буде цікаво слухати про професію, яку вона здобуває, а особливо про її майбутнє. Не маючи можливості висвітлити всіх сфер діяльності, ми вибрали спікерів, які говоритимуть про найцікавіші та найпоширеніші з них: література, IT, спорт, новітні
-        технології, сім’я, життєві цінності.
-        <br>
-        <br>Команда TEDxLNU — студенти цього ж університету, проте абсолютно різних факультетів.
-        <br>
-        <br>«Ми займаємося тим, в що справді віримо і любимо. Усі організатори TEDx в Україні працюють на волонтерських засадах».
-        <br>
-        <br>Головною аудиторією конференції будуть студенти, тому й TEDxLNU проходитиме в альма-матері молодих людей — ЛНУ ім. Івана Франка. Окрім студентів, до події приєднаються викладачі та всі бажаючі. Запрошуємо і вас відвідати першу в Україні конференцію
-        в стилі TEDx University.</p>
-    </div>
-  </div>
-  <div class="section" id="page-nav-share">
-    <div class="w-container">
-      <div class="w-row">
+      <div class="w-row speaker-row">
         <div class="w-col w-col-4">
-          <h3>Де?</h3>
-          <p>Львів. Головний корпус ЛНУ ім. Івана Франка (вул. Університетська, 1). Приміщення актового залу.</p>
+          <img class="speaker-photo" src="images/karelina.jpg" width="250" alt="karelina">
         </div>
-        <div class="w-col w-col-4">
-          <h3>Коли?</h3>
-          <p>14 грудня 2013 року</p>
+        <div class="w-col w-col-8">
+          <h3>Дарія Кареліна<span>Запоріжжя</span></h3>
+          <p>Людина, яка мріє про суспільство щасливих, енергійних та здорових людей. Персональний тренер, дієтолог, фітнес-блогер та журналіст. Несе позитив та корисні для здоров'я знання.</p>
         </div>
+      </div>
+      <div class="w-row speaker-row">
         <div class="w-col w-col-4">
-          <h3>Скільки?</h3>
-          <p>Ціна квитка* від 10 грн. Зібрані кошти подаруємо проекту <a href="http://www.mykolaj.com.ua">«Миколай про тебе не забуде»</a></p>
-          <p class="additional-info">*Відвідувач має право відмовитись давати внесок на благодійність. В такому разі подія для нього буде безкоштовною*</p>
+          <img class="speaker-photo" src="images/diaku.jpg" width="250" alt="diaku">
+        </div>
+        <div class="w-col w-col-8">
+          <h3>В’ячеслав та Оксана Дяки<span>Львів</span></h3>
+          <p>«Хочеться просто виконувати те, що час від часу просить наша доця: «Давай робити щось цікаве». Молоде подружжя IT-шників, батьки трирічної донечки. Спільним їхнім захопленням є піші/вело/авто/авіа подорожі. Власники 5-х велосипедів на 3-х членів
+            сім’ї. Оксана захоплюється хендмейдом та творчим розвитком дітей, є однією з активістів у саморганізованій творчій дитячій школі. В’ячеслав цікавиться різною технікою, фото- та відеозйомкою. Найбільше досягнення сім’ї: «Ми створили гідну частинку
+            цього суспільства і намагаємось цю частинку збільшувати й вдосконалювати». Мрія: «Великою родиною відправитися у велопохід»</p>
+        </div>
+      </div>
+      <div class="w-row speaker-row">
+        <div class="w-col w-col-4">
+          <img class="speaker-photo" src="images/zasadnyy.jpg" width="250" alt="zasadnyy">
+        </div>
+        <div class="w-col w-col-8">
+          <h3>Віталій Засадний<span>Львів</span></h3>
+          <p>Розробник ігор, засновник Google Developers Group Lviv, гік. Ентузіаст своєї справи. Вірить в те, що ми живемо в один із найцікавіших періодів розвитку людства, а новітні технології лише починають входити в наше життя. Мрія: «На запитання «чим
+            краще поснідати?» на основі даних про особливості локального клімату, пори року і стану власного здоров’я, отримати відповідь або ж пораду від розумного будинку».</p>
+        </div>
+      </div>
+      <div class="w-row speaker-row">
+        <div class="w-col w-col-4">
+          <img class="speaker-photo" src="images/pasichnyk.jpg" width="250" alt="pasichnyk">
+        </div>
+        <div class="w-col w-col-8">
+          <h3>Іван Пасічник<span>Київ</span></h3>
+          <p>Інженер, хакер, стартапер. Працює над першим українським 3D-принтером, також розвиває тему 3D-сканування. «Найкращим мотиватором для безупинної роботи стає успіх твого товариша, який працює за сусіднім столом. Повірте, це мотивує набагато краще
+            ніж прослуховування будь-якої новомодної лекції про те, як робити бізнес». Мрія: «Щоб всі перестали жалітися та почали працювати, тоді настане ера щасливих людей».</p>
         </div>
       </div>
     </div>
   </div>
-	<div class="section">
-		<div class="w-container registration">
-			<h3>Зареєструватися</h3>
-			<div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=9395930481&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Реєстрація</a><span style="color:#ddd;"> на </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.com/e/tedxlnu-tickets-9395930481?ref=etckt">TEDxLNU "Подих майбутнього"</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
-			
-		</div>
-	</div>
    <div class="section">
     <div class="w-container sponsors">
       <h2>Спонсори</h2>
@@ -112,9 +98,7 @@
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
 		  <a href="http://betaplace.com.ua/" target="blank" ><img src="images/betaplace.png" alt="betaplace"></a>
 		</div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
-		  <a href="http://communa.net.ua" target="blank" ><img src="images/communa.png" alt="communa"></a>
-		</div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
       </div>
     </div>
@@ -133,7 +117,9 @@
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
 		  <a href="http://be-sparkle.com/" target="blank" ><img src="images/besparkle.png" alt="besparkle"></a>  
 		</div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+		  <a href="http://communa.net.ua" target="blank" ><img src="images/communa.png" alt="communa"></a>
+		</div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
       </div>
     </div>
