--- a/team.html
+++ b/team.html
@@ -22,7 +22,8 @@
         </div>
         <nav class="w-col w-col-6 nav-column">
 			<a class="nav-link" href="index.html">Про TED</a>
-			<a class="nav-link" href="event.html" target="_self">Подія</a>
+			<a class="nav-link" href="event.html">Подія</a>
+			<a class="nav-link" href="speakers.html">Доповідачі</a>
 			<a class="nav-link" href="team.html">Команда</a>
         </nav>
       </div>
@@ -115,7 +116,9 @@
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
 		  <a href="http://betaplace.com.ua/" target="blank" ><img src="images/betaplace.png" alt="betaplace"></a>
 		</div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+		  <a href="http://communa.net.ua" target="blank" ><img src="images/communa.png" alt="communa"></a>
+		</div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
       </div>
     </div>
@@ -131,7 +134,9 @@
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
 		  <a href="http://ratusha.lviv.ua" target="blank" ><img src="images/ratusha.png" alt="ratusha"></a>
 		</div>
-        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
+        <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+		  <a href="http://be-sparkle.com/" target="blank" ><img src="images/besparkle.png" alt="besparkle"></a>  
+		</div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-6 w-col-tiny-4"></div>
       </div>
