--- a/event.html
+++ b/event.html
@@ -194,6 +194,11 @@
 						<img src="images/postpaper.png" alt="postpaper">
 					</a>
 				</div>
+				<div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+					<a href="http://www.youtube.com/channel/UCkvyAvD3Jc7znWnqqtafsCQ" target="blank">
+						<img src="images/franko_tv.png" alt="Franko TV">
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
