--- a/speakers.html
+++ b/speakers.html
@@ -67,7 +67,7 @@
 				</div>
 				<div class="w-col w-col-8">
 					<h3>В’ячеслав та Оксана Дяки, Львів
-						<span></span>
+						<span>"Сімейна стратегія: від студентів до подружжя"</span>
 					</h3>
 					<p>«Хочеться просто виконувати те, що час від часу просить наша доця: «Давай робити щось цікаве». Молоде подружжя IT-шників, батьки трирічної донечки. Спільним їхнім захопленням є піші/вело/авто/авіа подорожі. Власники 5-х велосипедів на 3-х членів сім’ї. Оксана захоплюється хендмейдом та творчим розвитком дітей, є однією з активістів у саморганізованій творчій дитячій школі. В’ячеслав цікавиться різною технікою, фото- та відеозйомкою. Найбільше досягнення сім’ї: «Ми створили гідну частинку цього суспільства і намагаємось цю частинку збільшувати й вдосконалювати». Мрія: «Великою родиною відправитися у велопохід»</p>
 				</div>
@@ -111,7 +111,7 @@
 				</div>
 				<div class="w-col w-col-8">
 					<h3>Варвара Перекрест, Москва 
-						<span></span>
+						<span>"Освіта майбутнього"</span>
 					</h3>
 					<p>Магістр в комунікаційному дизайні та педагогіці, позаштатний дизайнер-ілюстратор різних країн світу. Викладала в Університеті Кінгстон (Лондон) та Британської вищій школі дизайну (Москва), акредитований член Академії вищої освіти Великобританії (HEA).
 «Я вірю в наполегливість, розум та неперервний розвиток. Сучасне мистецтво та дизайн — це насамперед мислення.
@@ -209,6 +209,11 @@
 				<div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
 					<a href="http://postpaper.com.ua" target="blank">
 						<img src="images/postpaper.png" alt="postpaper">
+					</a>
+				</div>
+				<div class="w-col w-col-2 w-col-small-6 w-col-tiny-4">
+					<a href="http://www.youtube.com/channel/UCkvyAvD3Jc7znWnqqtafsCQ" target="blank">
+						<img src="images/franko_tv.png" alt="Franko TV">
 					</a>
 				</div>
 			</div>
